--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "WebTorrent Sidebar Player",
   "version": "1.0",
   "description": "Stream and seed torrents using WebTorrent and video.js.",
-  "permissions": ["storage", "activeTab", "scripting"],
+  "permissions": ["storage", "activeTab", "scripting", "sidePanel"],
   "host_permissions": ["<all_urls>"],
   "background": {
     "service_worker": "background.js"
@@ -13,7 +13,7 @@
     "default_icon": "assets/icon.png"
   },
   "side_panel": {
-    "default_page": "sidebar/sidebar.html",
+    "default_path": "sidebar/sidebar.html",
     "default_icon": "assets/icon.png"
   }
  
